--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+
+@theme {
+ --color-input: #F3F3F3;   
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,6 +14,6 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #FFFFFF;
 
 }
