--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'swiper/css';
+@import 'swiper/css/navigation';
+@import 'swiper/css/pagination';
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -17,3 +22,5 @@
   background-color: #FFFFFF;
 
 }
+
+
